# generic-fastapi-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.github_repo_slug}}/: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.github_repo_slug}}/dev/: config.env  dependencies.yaml  tags.json
{{cookiecutter.github_repo_slug}}/dev/config/pg-init.d/: 01-relationships.sql  (+3 more)
{{cookiecutter.github_repo_slug}}/scripts/: dev-down.sh  dev-up.sh
{{cookiecutter.github_repo_slug}}/tests/: unit.env
{{cookiecutter.github_repo_slug}}/tests/unit/: conftest.py  test_main.py  testutils.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/: main.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/api/: depends.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/core/: config.py  errors.py  events.py  hooks.py  typing.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/db/: base.py  session.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/docs/: utils.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/metadata/: responses.py  tags.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/middleware/: __init__.py  prometheus.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/schema/: health.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/utils/: utils.py
{{cookiecutter.github_repo_slug}}/{{cookiecutter.package_slug}}/validators/: __init__.py  timestamp.py
(+21 files in other folders)
