[tool.poetry]
name = "{{cookiecutter.package_slug}}"
version = "0.1.0"
description = "{{cookiecutter.package_description}}."
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/{{cookiecutter.github_repo_owner}}/{{cookiecutter.github_repo_slug}}"
authors = [
  "{{cookiecutter.github_repo_owner}} <{{cookiecutter.author_email}}>",
]


[tool.poetry.dependencies]
# These packages are mandatory and form the core of this package’s distribution.
python = "^3.9"
containerlog = "^0.3.0"
fastapi = "^0.61.1"
fastapi_rfc7807 = "^0.4.0"
prometheus_client = "^0.8.0"
pydantic = "^1.7"
starlette = "^0.13.6"
uvicorn = "^0.18.3"
wheel = "^0.35.1"
psycopg2 = "^2.8.6"
sqlalchemy = "^1.4.0"


[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-isort = "^5.0.0"
isort = "^5.10.1"
mypy = "^0.790"
pre-commit = "^2.7.1"
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
requests = "^2.24.0"


[tool.isort]
profile = "black"


[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | htmlcov
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
